--- a/index-main.html
+++ b/index-main.html
@@ -60,7 +60,7 @@
   <main id="main">
 
     <!-- ======= Services Section ======= -->
-    <section id="services" class="services" style="display: none;">
+    <section id="services" class="services" style="display: none; overflow: visible;">
 
       <div class="container" data-aos="fade-up">
 
