--- a/index.html
+++ b/index.html
@@ -83,8 +83,9 @@
       <img src="img/source2.png" usemap="#image-map">
 
       <div>
-        <a href="index-main.html?&point=sourcedModelOver" class="read-more"><span>Read More</span> <i
-            class="bi bi-arrow-right"></i></a>
+        <a href="index-main.html?&point=sourcedModelOver" class="read-more float-right"><span>Read More Role List</span> <i class="bi bi-arrow-right"></i></a> 
+        <br> 
+        <a href="index-main.html?&point=sourcedModelOver" class="read-more float-left"><span>Read More Zone List</span> <i class="bi bi-arrow-right"></i></a>
       </div>
 
 
@@ -97,7 +98,7 @@
 
 
       <div>
-        <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
+        <a href="index-main.html?&point=sourcedModelOver" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
       </div>
 
 
@@ -118,7 +119,7 @@
       <img src="img/source3.png" usemap="#image-map3">
 
       <div>
-        <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
+        <a href="index-main.html?&point=systemSkils" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
       </div>
 
     </div>
@@ -173,13 +174,7 @@
                   <p>15551, Sepapaja 6, <br> Tallinn, Estonia</p>
                 </div>
               </div>
-              <div class="col-md-6">
-                <div class="info-box">
-                  <i class="bi bi-telephone"></i>
-                  <h3>Call Us</h3>
-                  <p></p>
-                </div>
-              </div>
+             
               <div class="col-md-6">
                 <div class="info-box">
                   <i class="bi bi-envelope"></i>
@@ -276,7 +271,7 @@
                 15551, Sepapaja 6, <br>
                 Tallinn, Estonia
                 <br>
-                <strong>Phone:</strong> <br>
+              
                 <strong>Email:</strong> info@sourcedagile.com<br>
               </p>
 
