--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
 </head>
 
 <body>
+ 
 
   <!-- ======= Header ======= -->
   <header id="" class="header fixed-top">
-    <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
+    <div class="container-fluid  d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center">
         <img src="assets/img/logo.png" alt="">
@@ -63,7 +64,7 @@
   </div>
   <div class="landModeCl">
 
-    <div class="fixed-side-navbar">
+<!--     <div class="fixed-side-navbar">
       <ul class="nav flex-column">
         <li class="nav-item"><a class="nav-link" href="#home"><span>Sourced Agile Model Overview</span></a></li>
         <li class="nav-item"><a class="nav-link" href="#services"><span>Find Your Start Point</span></a></li>
@@ -71,11 +72,10 @@
         </li>
         <li class="nav-item"><a class="nav-link" href="#our-story"><span>Sourced Agile System</span></a></li>
 
-        <!--        <li class="nav-item"><a class="nav-link" href="#portfolio"><span>Tranings</span></a></li> -->
         <li class="nav-item"><a class="nav-link" href="#testimonials"><span>Events</span></a></li>
         <li class="nav-item"><a class="nav-link" href="#contact"><span>Contact Us</span></a></li>
       </ul>
-    </div>
+    </div> -->
 
 
     <div class="parallax-content panel baner-content" id="home">
@@ -83,7 +83,7 @@
       <img src="img/source2.png" usemap="#image-map">
 
       <div>
-        <a href="index-main.html?&point=sourcedModelOver" class="read-more float-right"><span>Read More Role List</span> <i class="bi bi-arrow-right"></i></a> 
+        <a href="index-main.html?&point=sourcedModelOver1" class="read-more float-right"><span>Read More Role List</span> <i class="bi bi-arrow-right"></i></a> 
         <br> 
         <a href="index-main.html?&point=sourcedModelOver" class="read-more float-left"><span>Read More Zone List</span> <i class="bi bi-arrow-right"></i></a>
       </div>
@@ -300,7 +300,7 @@
       class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
@@ -308,45 +308,10 @@
   <script src="assets/vendor/purecounter/purecounter.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/fullview/dist/fullview.min.js"></script>
 
   <script src="js/main.js"></script>
-  <script>
-    function openCity(cityName) {
-      var i;
-      var x = document.getElementsByClassName("city");
-      for (i = 0; i < x.length; i++) {
-        x[i].style.display = "none";
-      }
-      document.getElementById(cityName).style.display = "block";
-    }
 
-
-    $(document).ready(function () {
-      // Add smooth scrolling to all links
-      $(".fixed-side-navbar a, .primary-button a").on('click', function (event) {
-
-        // Make sure this.hash has a value before overriding default behavior
-        if (this.hash !== "") {
-          // Prevent default anchor click behavior
-          event.preventDefault();
-
-          // Store hash
-          var hash = this.hash;
-
-          // Using jQuery's animate() method to add smooth page scroll
-          // The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
-          $('html, body').animate({
-            scrollTop: $(hash).offset().top
-          }, 800, function () {
-
-            // Add hash (#) to URL when done scrolling (default click behavior)
-            window.location.hash = hash;
-          });
-        } // End if
-      });
-    });
-  </script>
 
 
 </body>
