--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </div> -->
 
 
-    <div class="parallax-content panel baner-content" id="home">
+    <div class="service-content" id="home">
 
       <img src="img/source2.png" usemap="#image-map">
 
@@ -91,7 +91,7 @@
 
     </div>
 
-    <div class="service-content panel" id="services">
+    <div class="service-content " id="services">
 
 
       <img src="img/source.png" usemap="#image-map2">
@@ -103,7 +103,7 @@
 
 
     </div>
-    <div class="tabs-content panel" id="Certificatie">
+    <div class="service-content " id="Certificatie">
 
       <img src="img/source4.png" usemap="#image-map3" style="margin: auto;">
 
@@ -114,7 +114,7 @@
 
     </div>
 
-    <div class="tabs-content panel" id="our-story" >
+    <div class="service-content " id="our-story" >
 
       <img src="img/source3.png" usemap="#image-map3">
 
