--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/fullview/dist/fullview.min.css" />
   <link href="assets/css/style.css" rel="stylesheet">
   <link rel="stylesheet" href="css/templatemo-main.css">
 
