--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/fullview/dist/fullview.min.css" />
+  <link rel="stylesheet" type="text/css" href="https://unpkg.com/fullview/dist/fullview.min.css" />
   <link href="assets/css/style.css" rel="stylesheet">
   <link rel="stylesheet" href="css/templatemo-main.css">
 
@@ -79,7 +79,7 @@
     </div> -->
 
 
-    <div class="service-content" id="home">
+    <div class="service-content" data-tooltip="Model Overview" id="home">
 
       <img src="img/source2.png" usemap="#image-map">
 
@@ -92,7 +92,7 @@
 
     </div>
 
-    <div class="service-content " id="services">
+    <div class="service-content " data-tooltip="Find Your Point" id="services">
 
 
       <img src="img/source.png" usemap="#image-map2">
@@ -104,7 +104,7 @@
 
 
     </div>
-    <div class="service-content " id="Certificatie">
+    <div class="service-content " data-tooltip="Certificatie" id="Certificatie">
 
       <img src="img/source4.png" usemap="#image-map3" style="margin: auto;">
 
@@ -115,7 +115,7 @@
 
     </div>
 
-    <div class="service-content " id="our-story" >
+    <div class="service-content " data-tooltip="System" id="our-story" >
 
       <img src="img/source3.png" usemap="#image-map3">
 
@@ -129,7 +129,7 @@
 
 
        <!-- ======= Testimonials Section ======= -->
-       <section id="testimonials panel" class="testimonials">
+       <section id="testimonials panel" data-tooltip="Events" class="testimonials">
 
         <div class="container">
   
@@ -157,7 +157,7 @@
 
 
     <!-- ======= Contact Section ======= -->
-    <section id="contact panel" class="contact panel">
+    <section id="contact panel" data-tooltip="Contact" class="contact panel">
 
       <div class="container">
 
@@ -237,7 +237,7 @@
     </section><!-- End Contact Section -->
 
     <!-- ======= Footer ======= -->
-    <footer id="footer panel" class="footer panel">
+    <footer id="footer panel"  class="footer panel">
 
 
       <div class="footer-top">
