--- a/index.html
+++ b/index.html
@@ -65,18 +65,7 @@
   </div>
   <div class="landModeCl">
 
-<!--     <div class="fixed-side-navbar">
-      <ul class="nav flex-column">
-        <li class="nav-item"><a class="nav-link" href="#home"><span>Sourced Agile Model Overview</span></a></li>
-        <li class="nav-item"><a class="nav-link" href="#services"><span>Find Your Start Point</span></a></li>
-        <li class="nav-item"><a class="nav-link" href="#Certificatie"><span>Certifications and Tranings</span></a>
-        </li>
-        <li class="nav-item"><a class="nav-link" href="#our-story"><span>Sourced Agile System</span></a></li>
 
-        <li class="nav-item"><a class="nav-link" href="#testimonials"><span>Events</span></a></li>
-        <li class="nav-item"><a class="nav-link" href="#contact"><span>Contact Us</span></a></li>
-      </ul>
-    </div> -->
 
 
     <div class="service-content" data-tooltip="Model Overview" id="home">
@@ -129,7 +118,7 @@
 
 
        <!-- ======= Testimonials Section ======= -->
-       <section id="testimonials panel" data-tooltip="Events" class="testimonials">
+       <section id="testimonials " data-tooltip="Events" class="testimonials">
 
         <div class="container">
   
@@ -157,7 +146,7 @@
 
 
     <!-- ======= Contact Section ======= -->
-    <section id="contact panel" data-tooltip="Contact" class="contact panel">
+    <section id="contact " data-tooltip="Contact" class="contact ">
 
       <div class="container">
 
@@ -237,7 +226,7 @@
     </section><!-- End Contact Section -->
 
     <!-- ======= Footer ======= -->
-    <footer id="footer panel"  class="footer panel">
+    <footer id="footer "  class="footer ">
 
 
       <div class="footer-top">
