--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="getstarted scrollto" href="https://app.sourcedagile.com/login.html">Login</a></li>
+          <li><a class=" nav-link" href="https://app.sourcedagile.com/login.html">System Login</a></li>
+          <li><button class=" btn btn-info " href="https://app.sourcedagile.com/login.html">My Account</button></li>
+     
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -70,6 +72,9 @@
 
     <div class="service-content" data-tooltip="Model Overview" id="home">
 
+      <header class="section-header">
+        <p>Sourced Agile(r) Model</p>
+      </header>
       <img src="img/source2.png" usemap="#image-map">
 
       <div>
@@ -95,6 +100,10 @@
     </div>
     <div class="service-content " data-tooltip="Certificatie" id="Certificatie">
 
+      
+      <header class="section-header">
+        <p>Certifications and Trainings</p>
+      </header>
       <img src="img/source4.png" usemap="#image-map3" style="margin: auto;">
 
       <div>
@@ -106,7 +115,10 @@
 
     <div class="service-content " data-tooltip="System" id="our-story" >
 
-      <img src="img/source3.png" usemap="#image-map3">
+      <header class="section-header">
+        <p>Sourced Agile system Feature</p>
+      </header>
+      <img src="img/source3.png" style="width: 70%;" usemap="#image-map3">
 
       <div>
         <a href="index-main.html?&point=systemSkils" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
@@ -123,7 +135,7 @@
         <div class="container">
   
           <header class="section-header">
-            <h2>Events</h2>
+            <h2></h2>
             <p>Events Lists</p>
           </header>
   
@@ -151,7 +163,7 @@
       <div class="container">
 
         <header class="section-header">
-          <h2>Contact</h2>
+          <h2></h2>
           <p>Contact Us</p>
         </header>
 
