--- a/index-main.html
+++ b/index-main.html
@@ -54,7 +54,7 @@
             </ul>
           </li>   
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-          <li><a class="getstarted scrollto" href="https://app.sourcedagile.com/login.html">Login</a></li>
+          <li><a class="nav-link scrollto" href="https://app.sourcedagile.com/login.html">Login</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -90,7 +90,7 @@
 
         <header class="section-header">
        
-          <p>Sourced Agile Model Overview</p>
+          <p class="trig-header">Sourced Agile Model Overview</p>
         </header>
         <div class="row">
           <div class="col-lg-4">
@@ -125,7 +125,7 @@
 
         <header class="section-header">
        
-          <p>Sourced Agile System</p>
+          <p class="">Sourced Agile System Features</p>
         </header>
         <div class="row">
           <div class="col-lg-3">
