--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link rel="stylesheet" type="text/css" href="https://unpkg.com/fullview/dist/fullview.min.css" />
+  <link rel="stylesheet" type="text/css" href="css/more.css" />
   <link href="assets/css/style.css" rel="stylesheet">
   <link rel="stylesheet" href="css/templatemo-main.css">
 
@@ -58,13 +58,6 @@
   </header><!-- End Header -->
 
 
-  <div id="warning-message">
-    <img src="img/3024768.png" alt="">
-    <span>
-      This website is only viewable in landscape mode
-    </span>
-
-  </div>
   <div class="landModeCl">
 
 
@@ -73,7 +66,7 @@
     <div class="service-content" data-tooltip="Model Overview" id="home">
 
       <header class="section-header">
-        <p>Sourced Agile(r) Model</p>
+        <p>Sourced Agile ® Model</p>
       </header>
       <img src="img/source2.png" usemap="#image-map">
 
@@ -238,7 +231,7 @@
     </section><!-- End Contact Section -->
 
     <!-- ======= Footer ======= -->
-    <footer id="footer "  class="footer ">
+    <footer id="footer " data-tooltip="footer"  class="footer ">
 
 
       <div class="footer-top">
@@ -261,8 +254,7 @@
             <div class="col-lg-2 col-6 footer-links">
               <h4>Useful Links</h4>
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <a href="#">Home</a></li>
-                <li><i class="bi bi-chevron-right"></i> <a href="#">About us</a></li>
+                <li><i class="bi bi-chevron-right"></i> <a href="#home">Home</a></li>
                 <li><i class="bi bi-chevron-right"></i> <a href="#">Services</a></li>
                 <li><i class="bi bi-chevron-right"></i> <a href="#">Terms of service</a></li>
                 <li><i class="bi bi-chevron-right"></i> <a href="#">Privacy policy</a></li>
@@ -313,7 +305,7 @@
   <script src="assets/vendor/purecounter/purecounter.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/fullview/dist/fullview.min.js"></script>
+  <script type="text/javascript" src="js/fullview.js"></script>
 
   <script src="js/main.js"></script>
 
