--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <div class="service-content " data-tooltip="System" id="our-story" >
 
       <header class="section-header">
-        <p>Sourced Agile system Feature</p>
+        <p>Sourced Agile System Features</p>
       </header>
       <img src="img/source3.png" style="width: 70%;" usemap="#image-map3">
 
