--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@
 
     <div class="service-content " data-tooltip="Find Your Point" id="services">
 
-
+      <header class="section-header">
+        <p>Sourced Agile ® Model</p>
+      </header>
     
       <img src="img/source.png" class="img-none-rotate" usemap="#image-map">
       <img src="img/sourcer.png" class="img-rotate" usemap="#image-map">
