--- a/index-main.html
+++ b/index-main.html
@@ -573,6 +573,9 @@
     </div>
   </footer><!-- End Footer -->
 
+  <div class="alert_box_inside">
+    
+  </div>
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <!-- Vendor JS Files -->
