--- a/login.html
+++ b/login.html
@@ -39,7 +39,7 @@
 <option data-countryCode="AW" value="297">Aruba (+297)</option>
 <option data-countryCode="AU" value="61">Australia (+61)</option>
 <option data-countryCode="AT" value="43">Austria (+43)</option>
-<option data-countryCode="AZ" value="994" selected>Azerbaijan (+994)</option>
+<option data-countryCode="AZ" value="994" selected="selected">Azerbaijan (+994)</option>
 <option data-countryCode="BS" value="1242">Bahamas (+1242)</option>
 <option data-countryCode="BH" value="973">Bahrain (+973)</option>
 <option data-countryCode="BD" value="880">Bangladesh (+880)</option>
