--- a/login.html
+++ b/login.html
@@ -24,7 +24,7 @@
     
         <div class="col-sm-2 form-group">
             <label for="cod">Country code</label>
-            <select class="form-control browser-default custom-select">
+            <select id="number-index-code" class="form-control browser-default custom-select">
                 <option data-countryCode="US" value="1" id="code-country" >USA (+1)</option>
 <option data-countryCode="GB" value="44">UK (+44)</option>
 
