--- a/index-main.html
+++ b/index-main.html
@@ -82,7 +82,7 @@
                     </a>
                     <ul class="dropdown-menu show">
                         <!-- The user image in the menu -->
-                        <li class="user-header">
+                        <li href="index-main.html?&point=profile" class="user-header">
                             <img src="img/userprofile.png" class="img-circle" id="user_index_img_large" alt="User Image">
 
                             <p id="name_index_block">revan </p>
@@ -91,10 +91,10 @@
                         <!-- Menu Footer-->
                         <li class="user-footer">
                             <div class="pull-left">
-                                <a href="index-main.html?&point=profile" class="btn btn-default btn-flat">Profil</a>
+                                <a href="index-main.html?&point=profile" class="btn btn-default btn-flat">Profile</a>
                             </div>
                             <div class="pull-right">
-                                <a href="#" id="exit_profile_name" class="btn btn-default btn-flat">Çıxış</a>
+                                <a href="#" id="exit_profile_name" class="btn btn-default btn-flat">Log out</a>
                             </div>
                         </li>
                     </ul>
@@ -573,8 +573,8 @@
     </div>
   </footer><!-- End Footer -->
 
-  <div class="alert_box_inside">
-    
+  <div class="alert_box_inside col-lg-3 col-md-5 col-sm-12" >
+
   </div>
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
