--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                   </a>
                   <ul class="dropdown-menu ">
                       <!-- The user image in the menu -->
-                      <li class="user-header">
+                      <li class="user-header" href="index-main.html?&point=profile">
                           <img src="img/userprofile.png" class="img-circle" id="user_index_img_large" alt="User Image">
   
                           <p id="name_index_block">revan </p>
@@ -83,10 +83,10 @@
                       <!-- Menu Footer-->
                       <li class="user-footer">
                           <div class="pull-left">
-                              <a href="index-main.html?&point=profile" class="btn btn-default btn-flat">Profil</a>
+                              <a href="index-main.html?&point=profile" class="btn btn-default btn-flat">Profile</a>
                           </div>
                           <div class="pull-right">
-                              <a href="#" id="exit_profile_name" class="btn btn-default btn-flat">Çıxış</a>
+                              <a href="#" id="exit_profile_name" class="btn btn-default btn-flat">Log out</a>
                           </div>
                       </li>
                   </ul>
@@ -391,6 +391,9 @@
     </form>
     </div>
   </div>
+</div>
+<div class="alert_box_inside col-lg-3 col-md-5 col-sm-12" >
+
 </div>
   <!-- Vendor JS Files -->
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
