--- a/profile.html
+++ b/profile.html
@@ -483,3 +483,98 @@
        </div>
    </div>
 </div>
+
+
+
+<div class="landModeCl">
+
+
+
+
+  <div class="service-content" data-tooltip="Model Overview" id="home">
+
+  
+  
+      <img src="img/source2.png" class="img-none-rotate" usemap="#image-map">
+      <img src="img/source2r.png" class="img-rotate" usemap="#image-map">
+   
+   
+
+    <div>
+      <a href="index-main.html?&point=sourcedModelOver1" class="read-more float-right"><span>Read More Role List</span> <i class="bi bi-arrow-right"></i></a> 
+      <br> 
+      <a href="index-main.html?&point=sourcedModelOver" class="read-more float-left"><span>Read More Zone List</span> <i class="bi bi-arrow-right"></i></a>
+    </div>
+
+
+  </div>
+
+  <div class="service-content " data-tooltip="Find Your Point" id="services">
+
+    <header class="header-model-img section-header">
+      <p>Sourced Agile ® Model</p>
+    </header>
+  
+    <img src="img/source.png" class="img-none-rotate" usemap="#image-map">
+    <img src="img/sourcer.png" class="img-rotate" usemap="#image-map">
+
+
+    <div>
+      <a href="index-main.html?&point=sourcedModelOver" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
+    </div>
+
+
+  </div>
+  <div class="service-content " data-tooltip="Certificatie" id="Certificatie">
+
+    
+    <header class="header-model-img section-header">
+      <p>Certifications and Trainings</p>
+    </header>
+
+    <img src="img/source4.png" class="img-none-rotate" usemap="#image-map">
+    <img src="img/source4r.png" class="img-rotate" usemap="#image-map">
+
+    <div>
+      <a href="index-main.html?&point=certificate" class="read-more"><span>Read More</span> <i
+          class="bi bi-arrow-right"></i></a>
+    </div>
+
+  </div>
+
+  <div class="service-content " data-tooltip="System" id="our-story" >
+
+    <header class="header-model-img section-header">
+      <p>Sourced Agile System Features</p>
+    </header>
+ 
+    <img src="img/source3.png" style="width: 70%;" class="img-none-rotate" usemap="#image-map">
+    <img src="img/source3r.png" class="img-rotate" usemap="#image-map">
+
+    <div>
+      <a href="index-main.html?&point=systemSkils" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
+    </div>
+
+  </div>
+
+
+
+
+     <!-- ======= Testimonials Section ======= -->
+     <section >
+
+    
+
+    </section><!-- End Testimonials Section -->
+
+
+
+  <!-- ======= Contact Section ======= -->
+  <section >
+
+  
+  </section><!-- End Contact Section -->
+
+
+
+</div>
