--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
 
   <div id="fullview">
-    <div class="service-content" style="background-image: url(https://app.sourcedagile.com/api/get/zdfiles/traininghub/source2_77C7F4CE1FF2D.png);" class="active" data-tooltip="Section 1 Title">
+    <div class="service-content" data-tooltip="Model Overview" id="home" style="background-image: url(https://app.sourcedagile.com/api/get/zdfiles/traininghub/source2_77C7F4CE1FF2D.png);" >
       <header class="header-model-img section-header">
         <p>Sourced Agile ® Model</p>
       </header>
@@ -122,10 +122,17 @@
     <a href="index-main.html?&point=sourcedModelOver" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
     </div>
     <div class="service-content " data-tooltip="Certificatie" id="Certificatie" style="background-image: url(https://app.sourcedagile.com/api/get/zdfiles/traininghub/source4_77C7F5130238E.png) ;" >
-      <h2>Section 3</h2>
+      <header class="header-model-img section-header">
+        <p>Certifications and Trainings</p>
+      </header>
+      <a href="index-main.html?&point=certificate" class="read-more"><span>Read More</span> <i
+        class="bi bi-arrow-right"></i></a>
     </div>
-    <div id="section4" data-tooltip="Section 4 Title">
-      <h2>Section 4</h2>
+    <div class="service-content " data-tooltip="System" id="our-story" style="background-image: url(https://app.sourcedagile.com/api/get/zdfiles/traininghub/source3_77C7F52B84A06.png);">
+      <header class="header-model-img section-header">
+        <p>Sourced Agile System Features</p>
+      </header>
+      <a href="index-main.html?&point=systemSkils" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
     </div>
     <div id="testimonials " data-tooltip="Events" class="testimonials">
       <div class="container">
