--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
 
       <div class="read-more-btn-block">
         <a href="index-main.html?&point=sourcedModelOver1" class="read-more "><span>Agile Role List</span> <i class="bi bi-arrow-right"></i></a> 
-       <br>
-        <a href="index-main.html?&point=sourcedModelOver" class="read-more"><span>Agile Zone List</span> <i class="bi bi-arrow-right"></i></a>
+       |
+        <a href="index-main.html?&point=sourcedModelOver" class="read-more"><span>Zone List</span> <i class="bi bi-arrow-right"></i></a>
      
       </div>
      
