--- a/index-main.html
+++ b/index-main.html
@@ -131,13 +131,22 @@
           <div class="col-lg-3  text-center">
 
             <img width="100%" src="" id="certification-image-single" alt="">
-            <h3 id="cert-name-single" class="col-lg-12 text-center"> Certification Name</h3>
+            <h6 id="cert-name-single" class="pt-4 col-lg-12 text-center"><b> Certification Name</b></h6>
             <a href="#" id="back_certififcationlist"  class="read-more"><span>Back To Certififcation List</span> <i class="bi bi-arrow-left"></i></a>
            <br> <a href="#" id="event-list-back"  class="read-more"><span>All Events List</span> <i class="bi bi-arrow-left"></i></a>
-          </div>
-          <div  class="cstmtab right-side col-md-9 col-sm-12 col-lg-9">
 
-            <div class="nav nav_custom_profile">
+           <div id="parent-sertification" class="pt-5 col-lg-12">
+
+
+           </div>
+           <div id="other-sertification-sub" class="pt-5 col-lg-12">
+
+
+           </div>
+          </div>
+          <div  class="cstmtab ps-5 right-side col-md-9 col-sm-12 col-lg-9">
+
+            <div class="nav nav_custom_profile ">
               <ul>
                 <li value="0" class="cert-desct active">Certifications</li>
                 <li value="1"  class="train-desct user-setting">Trainings</li>
