--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
           <li class="dropdown"> <a href="#"><button class="btn btn-info">Login <i
                   class="bi bi-chevron-down"></i></button> </a>
-            <ul>
+            <ul style="left: -100px;">
               <li><a class="nav-link" type="button" id="login_btn_data" data-bs-toggle="modal"
                   data-bs-target="#loginModalPage">Simulation Training Login</a></li>
               <li><a class="nav-link" href="https://app.sourcedagile.com/login.html" type="button">System Login</a></li>
@@ -275,29 +275,26 @@
               <div class="row gy-4">
 
                 <div class="col-md-6">
-                  <input type="text" name="name" id="contact_mail_name" class="form-control" placeholder="Your Name"
-                    required>
+                  <input type="text"  id="contact_mail_name" class="form-control" placeholder="Your Name"
+                    >
                 </div>
 
                 <div class="col-md-6 ">
-                  <input type="email" class="form-control" id="contact_mail_email" name="email" placeholder="Your Email"
-                    required>
+                  <input type="email" class="form-control" id="contact_mail_email"  placeholder="Your Email"
+                    >
                 </div>
 
                 <div class="col-md-12">
-                  <input type="text" class="form-control" id="contact_mail_subject" name="subject" placeholder="Subject"
-                    required>
+                  <input type="text" class="form-control" id="contact_mail_subject"  placeholder="Subject" >
                 </div>
 
                 <div class="col-md-12">
-                  <textarea class="form-control" id="contact_mail_body" name="message" rows="6" placeholder="Message"
-                    required></textarea>
+                  <textarea class="form-control" id="contact_mail_body"  rows="6" placeholder="Message"
+                    ></textarea>
                 </div>
 
                 <div class="col-md-12 text-center">
-                  <div class="loading">Loading</div>
-                  <div class="error-message"></div>
-                  <div class="sent-message">Your message has been sent. Thank you!</div>
+                
 
                   <button id="button-message-sub" type="submit">Send Message</button>
                 </div>
