--- a/index-main.html
+++ b/index-main.html
@@ -139,7 +139,7 @@
 
 
            </div>
-           <div id="other-sertification-sub" class=" col-lg-12">
+           <div id="other-sertification-sub"  style="text-align: left !important;" class="col-lg-12">
 
 
            </div>
